Fix sidedock text misalign

--- a/src/app/sidedock.scss
+++ b/src/app/sidedock.scss
@@ -116,11 +116,6 @@ body:not(.is-mobile) {
     margin-bottom: 0;
     border-inline-start: none;
   }
-
-  /* Text positioning */
-  .tree-item-self:not(.mod-collapsible) {
-    gap: 4px;
-  }
 }
 
 body.is-mobile {
